--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h2>Welcome to FlaskApp!</h2>
+    <h2>Welcome to FlaskApp! v.1.0.2</h2>
 </body>
 </html>
